<resources>
    <string name="app_name">Chuti</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_name">User Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="created">CREATED</string>
    <string name="success">APPROVED</string>
    <string name="rejected">REJECTED</string>
    <string name="rework">REWORK</string>
    <string name="approved">APPROVED</string>
    <string name="completed">COMPLETED</string>
    <string name="deleted">DELETED</string>
    <string name="inprocess">INPROCESS</string>
    <string name="chose_file">Chose File</string>
    <string name="available">Available:</string>
    <string name="used">Used :</string>
    <string name="held">Held:</string>
    <string name="number_of_requested_days_1_days">Number of requested Days: 1 days</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="submit_request">Submit Request</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="reason">Reason</string>
    <string name="pending_approval">Leave\n Approval</string>
    <string name="balance">Dashboard</string>
    <string name="notice_board">Notice Board</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="rest_password">Rest Password</string>
    <string name="account_setting">Account Setting</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="password">Enter Password</string>
    <string name="change_password">Change Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="enforce_to_login">Enforce To Login</string>
    <string name="chuti">CHUTI</string>
    <string name="total_duration_00_minutes">Total Duration: 00 Minutes</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure, you want to exit?</string>
    <string name="leave_request_reject_reason">Leave Request Reject Reason</string>
    <string name="close">Close</string>
    <string name="announcement">Announcement</string>
    <string name="outpass_approval">Outpass Approval</string>
    <string name="chuti_aleart">Chuti Aleart</string>
    <string name="save_changes">Save Changes</string>
    <string name="my_leave_n_request">My Leave \n Request</string>
    <string name="casual_leave">Casual Leave</string>
    <string name="earn_leave">Earn Leave</string>
    <string name="outpass_n_requests">Outpass\n Requests</string>
    <string name="leave_n_aprroval">Leave\n Aprroval</string>
    <string name="outpass_n_aprroval">Outpass\n Aprroval</string>
    <string name="my_leave_n_requests">My Leave\n Requests</string>
    <string name="my_outpass_n_requests">My Outpass\n Requests</string>
    <string name="log_out">Log Out</string>
    <string name="latest_announcement">Latest Announcement</string>
    <string name="active">ACTIVE</string>
    <string name="inactive">INACTIVE</string>
    <string name="sick">Sick</string>
    <string name="leave_type">Leave Type</string>
    <string name="accepted">Accepted</string>
</resources>