<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="36dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/chuti_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="CHUTI"
                    android:textColor="@color/redOrange"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/icon_login2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center_vertical"
                android:text="@string/log_in"
                android:textColor="@color/redOrange"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUserIdName"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:hint="@string/user_name"
                android:textSize="15sp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:endIconTint="@color/design_default_color_error"
                app:errorEnabled="true"
                app:helperText="Enter User Name"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/redOrange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userIdName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_account_circle"
                    android:drawablePadding="10dp"
                    android:inputType="textAutoComplete"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUserPassword"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/segoe_ui_regular"
                android:hint="@string/enter_password"
                android:textSize="15sp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/redOrange"
                app:errorEnabled="true"
                app:helperText="Enter Password"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/redOrange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5" />

                <CheckBox
                    android:id="@+id/chkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/ivFingerPrint"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_fingerprint" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight=".7"
                    android:text="Need Help?"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1.3"
                    android:backgroundTint="@color/redOrange"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:visibility="invisible"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="Create account"
                android:textColor="@color/redOrange"
                android:textSize="12dp" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>