<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".UI.EmployeeGatepassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_gradient"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/txtFromTimeSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:src="@drawable/ic_calendar_month" />

        <TextView
            android:id="@+id/txtFromTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="From Time"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtFromDateTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="From Time"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/txtToTimeSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:src="@drawable/ic_calendar_month" />

        <TextView
            android:id="@+id/txtToTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="To Time"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtToDateTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="From Time"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtReason"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/reason"
        android:drawableStart="@drawable/icon_note"
        android:background="@drawable/bg_gradient"
        android:gravity="top"/>

    <TextView
        android:id="@+id/txtRequestedTime"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:text="@string/total_duration_00_minutes"
        android:textColor="@color/redOrange"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/txtCheckIsFullDay"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:text="Full Day"
        android:textColor="@color/redOrange"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/redOrange"
            android:text="@string/submit_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>