<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".UI.FragmentResetPassword">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:letterSpacing=".09"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/employee_id"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtUserID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/et_custom"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Employee Name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/et_custom"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Old Password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/segoe_ui_regular"
        android:hint="Old Password"
        android:textSize="15sp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:endIconTint="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="New Password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/segoe_ui_regular"
        android:hint="New Password"
        android:textSize="15sp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconTint="@color/teal_700"
        app:errorEnabled="true"
        app:helperText="Enter Strong Password"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#009688">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Confirm Password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/segoe_ui_regular"
        android:hint="Confirm Password"
        android:textSize="15sp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconTint="@color/teal_700"
        app:errorEnabled="true"
        app:helperText="Enter Strong Password"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#009688">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_gradient"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="Apply Change"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/txtSwipeRight"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/txtSwipeRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:text="@string/swipe_right_for_login"
            android:textColor="@color/redOrange"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>